--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
     </div>
     <nav>
       <% if user_signed_in? %>
-        <div>
-          <%= link_to 'Ordens de Serviço', work_orders_path, class: controller_name == 'work_orders' ? 'selected': '' %> |
-          <%= link_to 'Modalidades de Transporte', shipping_types_path, class: controller_name == 'shipping_types' ? 'selected': ''  %> |
-          <%= link_to 'Veículos', vehicles_path, class: controller_name == 'vehicles' ? 'selected': ''  %> |
+        <div class='menu-links'>
+          <%= link_to 'Ordens de Serviço', work_orders_path, class: controller_name == 'work_orders' ? 'selected': '' %> 
+          <%= link_to 'Modalidades de Transporte', shipping_types_path, class: controller_name == 'shipping_types' ? 'selected': ''  %> 
+          <%= link_to 'Veículos', vehicles_path, class: controller_name == 'vehicles' ? 'selected': ''  %> 
           <%= link_to 'Configurações', configurations_path, class: controller_name == 'configurations' ? 'selected': ''  %> 
         </div>
       <% end %>
@@ -37,9 +37,11 @@
     </nav>
   </header>
   <main>
-    <%= alert %>
-    <%= notice %>
-    <%= yield %>
+    <div class='alert'>
+      <%= alert %>
+      <%= notice %>
+    </div>
+      <%= yield %>
   </main>
   </body>
 </html>
