--- a/app/views/vehicles/search.html.erb
+++ b/app/views/vehicles/search.html.erb
@@ -1,5 +1,8 @@
+<section id="search_vehicle">
 <h2>Resultado da busca por: <%= @code %></h2>
-
+<div class='page-title'>
+</div>
 <% @vehicles.each do |v| %>
   <%= render v %>
 <% end %>
+</section>
