--- a/app/views/work_orders/search.html.erb
+++ b/app/views/work_orders/search.html.erb
@@ -1,5 +1,8 @@
+<section id="search_work_order">
 <h2>Resultado da busca por: <%= @code %></h2>
-
+<div class='page-title'>
+</div>
 <% @work_orders.each do |w| %>
   <%= render w %>
 <% end %>
+</section>
