--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,12 +16,17 @@
 
 * {
     font-family: 'roboto', sans-serif;
+    text-decoration: none;
 } 
+
+.button {
+    border: 1px ridge #CCC;
+    padding: 5px;
+    border-radius: 5px;
+}
 
 body {
     padding: 0 60px;
-
-
     /* background-color: #26004C; */
 }
 
@@ -56,13 +61,48 @@ nav .selected {
     font-weight: bold;
     }
 
+nav .menu-links {
+    display: flex;
+    gap: 40px;
+}
+
 h2 {
     margin-top: 60px;
     text-align: center;
 }
 
+.alert {
+    padding: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+
+/* ====== form ====== */
+
+.form {
+    width: 40%;
+}
+
+.form .input-wrapper {
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.form input {
+    width: 200px;
+}
+
+/* ================== */
+
 #work_orders .page-title {
     margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
 }
 
 #work_orders {
@@ -71,9 +111,91 @@ h2 {
     align-items: center;
 }
 
+#new_work_order {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#new_work_order .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+}
+
+#pending_work_orders {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#pending_work_orders .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 40%;
+}
+
+#show_work_order {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#show_work_order .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 25%;
+}
+
+#search_work_order {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#searcg_work_order .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+}
+
 #shipping_types {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+#shipping_types .page-title{
+    margin-bottom: 60px;
+}
+
+#show_shipping_type {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#show_shipping_type .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 25%;
+}
+
+#new_shipping_type{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#new_shipping_type .page-title {
+    margin-bottom: 60px;
+    display: flex;
     align-items: center;
 }
 
@@ -95,6 +217,44 @@ h2 {
     display: inline;
 }
 
+#show_vehicle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#show_vehicle .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 25%;
+}
+
+#new_vehicle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#new_vehicle .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+}
+
+#search_vehicle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#search_vehicle .page-title {
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+}
+
 #vehicles .search-bar {
     width: 150px;
 }
@@ -105,3 +265,30 @@ h2 {
     align-items: center;
 }
 
+#configurations .page-title{
+    margin-bottom: 60px;
+}
+
+#weight_configurations {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+
+#price_per_distance_configurations {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+
+#new_delivery_time_configuration {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+
+#new_price_per_distance_configuration {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
