--- a/app/views/configurations/index.html.erb
+++ b/app/views/configurations/index.html.erb
@@ -1,6 +1,8 @@
 <section id="configurations">
 <h2>Configurações</h2>
-<%= link_to 'Configurações de preço por peso', weight_configurations_path %><br>
-<%= link_to 'Configurações de prazo', delivery_time_configurations_path %><br>
-<%= link_to 'Configurações de preço por distância percorrida', price_per_distance_configurations_path %><br>
+<div class='page-title'>
+</div>
+<%= link_to 'Configurações de preço por peso', weight_configurations_path, class: 'button' %><br>
+<%= link_to 'Configurações de prazo', delivery_time_configurations_path, class: 'button' %><br>
+<%= link_to 'Configurações de preço por distância percorrida', price_per_distance_configurations_path, class: 'button' %><br>
 </section>
