--- a/app/views/delivery_time_configurations/_form.html.erb
+++ b/app/views/delivery_time_configurations/_form.html.erb
@@ -1,17 +1,17 @@
-<%= form_with(model: @delivery_time_configuration) do |f| %>
-  <div>
+<%= form_with(model: @delivery_time_configuration, class: 'form') do |f| %>
+  <div class='input-wrapper'>
     <%= f.label :minimum_distance, 'Distância mínima:' %>
     <%= f.number_field :minimum_distance %>
   </div>
-    <div>
+    <div class='input-wrapper'>
     <%= f.label :maximum_distance, 'Distância máxima:' %>
     <%= f.number_field :maximum_distance %>
   </div>
-    <div>
+    <div class='input-wrapper'>
     <%= f.label :delivery_time, 'Prazo:' %>
     <%= f.number_field :delivery_time %>
   </div>
-  <div>
+  <div class='input-wrapper'>
     <%= f.label :shipping_type_id, 'Modalidade de transporte:' %>
     <%= f.select :shipping_type_id, DeliveryTimeConfiguration.shipping_types_for_select %><br>
   </div>
