--- a/app/views/price_per_distance_configurations/new.html.erb
+++ b/app/views/price_per_distance_configurations/new.html.erb
@@ -1,11 +1,13 @@
-<% if(@price_per_distance_configuration.errors.any?) %>
-  <p>Verifique os erros abaixo:</p>
-  <ul>
-    <% @price_per_distance_configuration.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-<h2>Nova configuração de preço por distância</h2>
-<%= render 'form' %><br>
-<%= link_to 'Voltar', price_per_distance_configurations_path %>
+<section id="new_price_per_distance_configuration">
+  <% if(@price_per_distance_configuration.errors.any?) %>
+    <p>Verifique os erros abaixo:</p>
+    <ul>
+      <% @price_per_distance_configuration.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  <h2>Nova configuração de preço por distância</h2>
+  <%= link_to 'Voltar', price_per_distance_configurations_path, class: 'button' %>
+  <%= render 'form' %><br>
+</section>
