--- a/app/views/shipping_types/new.html.erb
+++ b/app/views/shipping_types/new.html.erb
@@ -1,12 +1,15 @@
-<% if(@shipping_type.errors.any?) %>
-  <p>Verifique os erros abaixo:</p>
-  <ul>
-    <% @shipping_type.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-<h2>Nova modalidade de transporte</h2>
-<%= render 'form' %><br>
-<%= link_to 'Voltar', root_path %>
-
+<section id="new_shipping_type">
+  <% if(@shipping_type.errors.any?) %>
+    <p>Verifique os erros abaixo:</p>
+    <ul>
+      <% @shipping_type.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  <h2>Nova modalidade de transporte</h2>
+  <div class='page-title'>
+    <%= link_to 'Voltar', shipping_types_path, class: 'button' %>
+  </div>
+  <%= render 'form' %>
+</section>
