--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -2,7 +2,7 @@
 <h2>Veículos</h2>
 <div class='page-title'>
 <% if current_user.admin? %>
-  <%= link_to 'Adicionar novo veículo', new_vehicle_path, class:'link' %>
+  <%= link_to 'Adicionar novo veículo', new_vehicle_path, class:'link', class: 'button' %>
 <% end %>
 <%= form_with(url: search_vehicles_path, method: :get) do |f| %>
   <%= f.text_field :query_vehicle, placeholder: 'Placa do veículo', class: 'search-bar' %>
