--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -1,11 +1,15 @@
+<section id="show_vehicle">
 <h2>Veículo: <%= @vehicle.manufacturer %> <%= @vehicle.model %> - <%= @vehicle.license_plate %> </h2>
+<div class='page-title'>
+  <%= link_to 'Voltar', vehicles_path, class: 'button' %>
+  <% if current_user.admin? %>
+    <%= link_to 'Editar', edit_vehicle_path(@vehicle.id), class: 'button' %>
+  <% end %>
+</div>
 <div>
   <strong>Ano de fabricação: </strong><%= @vehicle.year %><br>
   <strong>Capacidade de carga: </strong><%= @vehicle.load_capacity/100 %>kg<br>
   <strong>Em manutenção: </strong> <%= I18n.translate(@vehicle.maintenance) %><br>
   <strong>Disponível: </strong><%= I18n.translate(@vehicle.available && !@vehicle.maintenance) %><br>
 </div>
-<% if current_user.admin? %>
-  <%= link_to('Editar', edit_vehicle_path(@vehicle.id)) %><br><br>
-<% end %>
-<%= link_to('Voltar', vehicles_path) %>
+</section>
