--- a/app/views/weight_configurations/_form.html.erb
+++ b/app/views/weight_configurations/_form.html.erb
@@ -1,17 +1,17 @@
-<%= form_with(model: @weight_configuration) do |f| %>
-  <div>
+<%= form_with(model: @weight_configuration, class: 'form') do |f| %>
+  <div class='input-wrapper'>
     <%= f.label :minimum_weight, 'Peso mínimo:' %>
     <%= f.number_field :minimum_weight %>
   </div>
-    <div>
+  <div class='input-wrapper'>
     <%= f.label :maximum_weight, 'Peso máximo:' %>
     <%= f.number_field :maximum_weight %>
   </div>
-    <div>
+  <div class='input-wrapper'>
     <%= f.label :price, 'Preço:' %>
     <%= f.number_field :price %>
   </div>
-  <div>
+  <div class='input-wrapper'>
     <%= f.label :shipping_type_id, 'Modalidade de transporte:' %>
     <%= f.select :shipping_type_id, WeightConfiguration.shipping_types_for_select %><br>
   </div>
