--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -2,9 +2,9 @@
 <h2>Ordens de Serviço</h2>
 <div class='page-title'>
   <% if current_user.admin? %>
-    <%= link_to 'Adicionar nova ordem de serviço', new_work_order_path, class:'link' %><br>
+    <%= link_to 'Adicionar nova ordem de serviço', new_work_order_path, class:'link', class: 'button' %><br>
   <% end %>
-  <%= link_to 'Mostrar ordens de serviço pendentes', pending_work_orders_path %><br>
+  <%= link_to 'Mostrar ordens de serviço pendentes', pending_work_orders_path, class: 'button' %><br>
 </div>
 <% @work_orders.each do |w| %>
   <div>
