--- a/app/views/shipping_types/edit.html.erb
+++ b/app/views/shipping_types/edit.html.erb
@@ -1,3 +1,4 @@
+<section class='page-layout'>
 <% if(@shipping_type.errors.any?) %>
   <p>Verifique os erros abaixo:</p>
   <ul>
@@ -9,3 +10,4 @@
 <h2>Editar modalidade de transporte</h2>
 <%= render 'form' %><br>
 <%= link_to 'Voltar', shipping_type_path %>
+<section class='page-layout'>
