--- a/app/views/shipping_types/new.html.erb
+++ b/app/views/shipping_types/new.html.erb
@@ -1,4 +1,4 @@
-<section id="new_shipping_type">
+<section class='page-layout'>
   <% if(@shipping_type.errors.any?) %>
     <p>Verifique os erros abaixo:</p>
     <ul>
