--- a/app/views/vehicles/edit.html.erb
+++ b/app/views/vehicles/edit.html.erb
@@ -1,3 +1,4 @@
+<section class='page-layout'>
 <% if(@vehicle.errors.any?) %>
   <p>Verifique os erros abaixo:</p>
   <ul>
@@ -9,3 +10,4 @@
 <h2>Editar veículo</h2>
 <%= render 'form' %><br>
 <%= link_to 'Voltar', vehicle_path %>
+<section class='page-layout'>
