--- a/app/views/vehicles/search.html.erb
+++ b/app/views/vehicles/search.html.erb
@@ -1,4 +1,4 @@
-<section id="search_vehicle">
+<section class='page-layout'>
 <h2>Resultado da busca por: <%= @code %></h2>
 <div class='page-title'>
 </div>
@@ -9,5 +9,4 @@
 <% if @vehicles.empty? %>
   <p>Nenhum resultado encontrado.</p>
 <% end %>
-
 </section>
