--- a/app/views/work_orders/late.html.erb
+++ b/app/views/work_orders/late.html.erb
@@ -1,3 +1,4 @@
+<section class='page-layout'>
 <h2>Ordem de serviço atrasada.</h2>
 <%= form_tag(work_order_late_cause_path(@work_order.id), method: :post) do %>
   <div>
@@ -7,3 +8,4 @@
     <br><%= submit_tag 'Salvar' %>
   </div>
 <% end %>
+</section>
