--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -1,4 +1,4 @@
-<section id="new_work_order">
+<section class='page-layout'>
   <% if(@work_order.errors.any?) %>
     <p>Verifique os erros abaixo:</p>
     <ul>
