--- a/app/views/work_orders/pending.html.erb
+++ b/app/views/work_orders/pending.html.erb
@@ -1,9 +1,10 @@
-<section id="pending_work_orders">
+<section class='page-layout'>
 <h2>Ordens de Serviço Pendentes</h2>
 <div class='page-title'>
   <%= link_to 'Voltar', work_orders_path, class: 'button' %>
   Ordens de serviço pendentes encontradas: <%= @pending_work_orders.count %>
 </div>
+<div>
 <% @pending_work_orders.each do |w| %>
   <div>
     <h3>Código: <%= link_to(w.code, work_order_path(w.id)) %></h3>
@@ -15,6 +16,7 @@
       <dl>
   </div> 
 <% end %>
+</div>
 <% if @pending_work_orders.empty? %>
   <p> Não existem ordens de serviço pendentes no momento.</p>
 <% end %> 
