--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -1,6 +1,6 @@
-<section id="show_work_order">
+<section class='page-layout'>
 <h2>Ordem de Serviço: <%= @work_order.code %> </h2>
-<div class='page-title'>
+<div class='page-title-two-buttons'>
   <%= link_to 'Voltar', work_orders_path, class: 'button' %>
   <% if @work_order.status == 'pending' %>
     <%= link_to('Editar', edit_work_order_path(@work_order.id), class: 'button') %>
