--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,7 +1,7 @@
-<section id="vehicles">
+<section class='page-layout'>
 <h2>Veículos</h2>
-<div class='page-title'>
-<% if true#current_user.admin? %>
+<div class='page-title-two-buttons'>
+<% if current_user.admin? %>
   <%= link_to 'Adicionar novo veículo', new_vehicle_path, class: 'button' %>
 <% end %>
 <%= form_with(url: search_vehicles_path, method: :get) do |f| %>
@@ -9,6 +9,7 @@
   <%= f.submit 'Buscar' %>
 <% end %>
 </div>
+<div>
 <% @vehicles.each do |v| %>
   <div>
     <h3><%= v.manufacturer %> <%= v.model %> <%= link_to(v.license_plate, vehicle_path(v.id)) %> </h3>
@@ -18,6 +19,7 @@
       <dl>
     </div>  
 <% end %>
+</div>
 
 <% if @vehicles.empty? %>
   <p> Não existem veículos cadastrados. </p>
