--- a/app/views/vehicles/new.html.erb
+++ b/app/views/vehicles/new.html.erb
@@ -1,4 +1,4 @@
-<section id="new_vehicle">
+<section class='page-layout'>
 <% if(@vehicle.errors.any?) %>
   <p>Verifique os erros abaixo:</p>
   <ul>
