--- a/app/views/weight_configurations/index.html.erb
+++ b/app/views/weight_configurations/index.html.erb
@@ -1,11 +1,13 @@
-<section id="vehicles">
+<section class='page-layout'>
   <h2>Configurações de preço por peso</h2>
+  <div class='page-title'>
     <% if current_user.admin? %>
       <%= link_to 'Adicionar nova configuração', new_weight_configuration_path, class: 'button' %>
     <% end %>
     <% if @weight_configurations.empty? %>
       <p> Não existem configurações cadastradas. </p>
     <% end %>
+  </div>
 
   <p>Tabela de preço por peso</p>
   <table>
