--- a/app/views/work_orders/search.html.erb
+++ b/app/views/work_orders/search.html.erb
@@ -1,4 +1,4 @@
-<section id="search_work_order">
+<section class='page-layout'>
 <h2>Resultado da busca por: <%= @code %></h2>
 <div class='page-title'>
 </div>
