--- a/app/views/shipping_types/_form.html.erb
+++ b/app/views/shipping_types/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class='input-wrapper'>
     <%= f.label :fee, 'Taxa:' %>
-    <%= f.number_field :fee, placeholder: 'Valor em centavos' %>
+    <%= f.number_field :fee, placeholder: 'R$' %>
   </div>
     <div class='input-wrapper'>
     <%= f.label :active, 'Ativada:' %>
