--- a/app/views/delivery_time_configurations/_form.html.erb
+++ b/app/views/delivery_time_configurations/_form.html.erb
@@ -1,15 +1,15 @@
 <%= form_with(model: @delivery_time_configuration, class: 'form') do |f| %>
   <div class='input-wrapper'>
     <%= f.label :minimum_distance, 'Distância mínima:' %>
-    <%= f.number_field :minimum_distance %>
+    <%= f.number_field :minimum_distance, placeholder: 'Distância em kilômetros' %>
   </div>
     <div class='input-wrapper'>
     <%= f.label :maximum_distance, 'Distância máxima:' %>
-    <%= f.number_field :maximum_distance %>
+    <%= f.number_field :maximum_distance, placeholder: 'Distância em kilômetros' %>
   </div>
     <div class='input-wrapper'>
     <%= f.label :delivery_time, 'Prazo:' %>
-    <%= f.number_field :delivery_time %>
+    <%= f.number_field :delivery_time, placeholder: 'Prazo em horas' %>
   </div>
   <div class='input-wrapper'>
     <%= f.label :shipping_type_id, 'Modalidade de transporte:' %>
